add .env to gitignore

--- a/specs/elastic-secret.yaml
+++ b/specs/elastic-secret.yaml
@@ -6,3 +6,5 @@ metadata:
 type: Opaque
 data:
   ES_PASSWORD: YWV5aTlPazdyYWVuZ29OZ2FobGFLNG5lb2dob296OE8=
+  REDDIT_CLIENT_ID: OUpsX1JBU2F3YkdaWTJqNzJ6OTZ3Zw==
+  REDDIT_CLIENT_SECRET: RG2zYXBtbmdXdHpqZmtlNGpoSmhOT2NWZ2tVZjh3
