add bluesky id and password

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ ES_PASSWORD=aeyi9Ok7raengoNgahlaK4neoghooz8O
 
 REDDIT_CLIENT_ID=9Jl_BASawbGZY2j72z96wg
 REDDIT_CLIENT_SECRET=DmsapmngWtzjfke4jhJhNOcVgkUf8w
+
+BLUESKY_CLIENT_ID=numbpotato
+BLUESKY_CLIENT_PASSWORD=npf4-ezv2-hv7x-jypx
