--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ REDDIT_CLIENT_SECRET=DmsapmngWtzjfke4jhJhNOcVgkUf8w
 
 BLUESKY_CLIENT_ID=goodmarmalade.bsky.social
 BLUESKY_CLIENT_PASSWORD=npf4-ezv2-hv7x-jypx
+
+MASTODON_CLIENT_ID=0y0gHqiJACPgNze4qg08cDE6N40QDz1xampEbs7NF-E
+MASTODON_CLIENT_SECRET=LIaHM-FAAYpXvxUB1xNnlwrw-8fSx_XI3eTm-1Kzwh0
+MASTODON_ACCESS_TOKEN=uvSQ1Am9b7ngrFbQe545Da7aw-snLkCFYXd4Qp0G2V8
