--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,7 @@ REDDIT_CLIENT_SECRET=DmsapmngWtzjfke4jhJhNOcVgkUf8w
 
 BLUESKY_CLIENT_ID=goodmarmalade.bsky.social
 BLUESKY_CLIENT_PASSWORD=npf4-ezv2-hv7x-jypx
+
+MASTODON_CLIENT_ID=	0yOgHqiJACPgNze4qgO8cDE6N4OQDzlxampEbs7NF-E
+MASTODON_CLIENT_SECRET=LIaHM-FAAYpXvxUB1xNnlwrw-8fSx_XI3eTm-lKzwh0
+MASTODON_ACCESS_TOKEN=R_kx7HIOIb5RJ_sKsvlT-BlSpL5HyFYI4XldZV_obCs
