added fission function for sentment however need to apply time trigger later after i resovle the cleantext issue'

--- a/specs/elastic-secret.yaml
+++ b/specs/elastic-secret.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: default
 type: Opaque
 data:
+  ES_USERNAME: ZWxhc3RpYw==
   ES_PASSWORD: YWV5aTlPazdyYWVuZ29OZ2FobGFLNG5lb2dob296OE8=
-  REDDIT_CLIENT_ID: OUpsX1JBU2F3YkdaWTJqNzJ6OTZ3Zw==
-  REDDIT_CLIENT_SECRET: RG2zYXBtbmdXdHpqZmtlNGpoSmhOT2NWZ2tVZjh3
+  REDDIT_CLIENT_ID: OUpsX0JBU2F3YkdaWTJqNzJ6OTZ3Zw==
+  REDDIT_CLIENT_SECRET: RG1zYXBtbmdXdHpqZmtlNGpoSmhOT2NWZ2tVZjh3
+  
