--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 ES_USERNAME=elastic
 ES_PASSWORD=aeyi9Ok7raengoNgahlaK4neoghooz8O
-
+ES_HOST=https://localhost:9200
 REDDIT_CLIENT_ID=9Jl_BASawbGZY2j72z96wg
 REDDIT_CLIENT_SECRET=DmsapmngWtzjfke4jhJhNOcVgkUf8w
 
