--- a/backend/fission/specs/package-aflsubred-pkg.yaml
+++ b/backend/fission/specs/package-aflsubred-pkg.yaml
@@ -1,15 +1,15 @@
 include:
-- ./functions/aflHarvester/aflHarvester.py
-- ./functions/aflHarvester/requirements.txt
+- ./functions/aflSubRed/aflSubRed.py
+- ./functions/aflSubRed/requirements.txt
 kind: ArchiveUploadSpec
-name: functions-aflharvester-aflharvester-py-1glp
+name: functions-aflsubred-aflsubred-py-IfBM
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: aflharvester-pkg
+  name: aflsubred-pkg
 spec:
   deployment:
     checksum: {}
@@ -19,7 +19,7 @@ spec:
   source:
     checksum: {}
     type: url
-    url: archive://functions-aflharvester-aflharvester-py-1glp
+    url: archive://functions-aflsubred-aflsubred-py-IfBM
 status:
   buildstatus: pending
-  lastUpdateTimestamp: "2025-05-12T14:42:25Z"
+  lastUpdateTimestamp: "2025-05-12T14:40:33Z"
