added check function for elastic to avoid adding duplication and created test function

--- a/backend/fission/specs/timetrigger-scoretimer.yaml
+++ b/backend/fission/specs/timetrigger-scoretimer.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: scoretimer
 spec:
-  cron: 0 10 * * MON
+  cron: 0 12 * * *
   functionref:
     functionweights: null
     name: scoreharvester
