--- a/backend/fission/specs/timetrigger-aflsubred-timer.yaml
+++ b/backend/fission/specs/timetrigger-aflsubred-timer.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: aflsubred-timer
 spec:
-  cron: 0 */12 * * *
+  cron: 0 12 * * *
   functionref:
     functionweights: null
     name: aflsubred
