WIP: local edits before rebase

--- a/backend/fission/functions/followerHarvester/Dockerfile
+++ b/backend/fission/functions/followerHarvester/Dockerfile
@@ -1,16 +1,14 @@
-FROM python:3.9-slim
+FROM fission/python-env:3.9
 
+# 安装 Chromium、Chromedriver 和依赖
 RUN apt-get update && apt-get install -y \
-    chromium-driver \
     chromium \
-    curl \
-    unzip \
-    && apt-get clean \
+    chromium-driver \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install selenium elasticsearch
+# 安装 Python 依赖
+RUN pip install --no-cache-dir selenium elasticsearch
 
+# 设置环境变量（供 Selenium 使用）
 ENV CHROME_BIN=/usr/bin/chromium
-ENV CHROMEDRIVER_BIN=/usr/bin/chromedriver
-
-CMD ["python3"]
+ENV CHROMEDRIVER_PATH=/usr/bin/chromedriver
