--- a/backend/fission/specs/fission-deployment-config.yaml
+++ b/backend/fission/specs/fission-deployment-config.yaml
@@ -3,5 +3,5 @@
 # Do not edit the UID below: that will break 'fission spec apply'
 apiVersion: fission.io/v1
 kind: DeploymentConfig
-name: fission
-uid: 9d762fef-179f-45f4-a6ae-f11cb4d41630
+name: bluesky-fan
+uid: 5260da47-1d36-4aac-bff8-67dfe67a16a8
