--- a/backend/fission/specs/fission-deployment-config.yaml
+++ b/backend/fission/specs/fission-deployment-config.yaml
@@ -3,5 +3,5 @@
 # Do not edit the UID below: that will break 'fission spec apply'
 apiVersion: fission.io/v1
 kind: DeploymentConfig
-name: bluesky-fan
-uid: 5260da47-1d36-4aac-bff8-67dfe67a16a8
+name: fission
+uid: da4844f0-4a4b-48dd-97d3-295026b5ee58
