--- a/backend/fission/specs/package-fanpkg.yaml
+++ b/backend/fission/specs/package-fanpkg.yaml
@@ -2,14 +2,14 @@ include:
 - ./functions/bluesky_fan/blueskyfan.py
 - ./functions/bluesky_fan/requirements.txt
 kind: ArchiveUploadSpec
-name: functions-bluesky-fan-blueskyfan-py-8ofJ
+name: functions-bluesky-fan-blueskyfan-py-dhRL
 
 ---
 apiVersion: fission.io/v1
 kind: Package
 metadata:
   creationTimestamp: null
-  name: blueskyfan-pkg
+  name: fanpkg
 spec:
   deployment:
     checksum: {}
@@ -19,7 +19,7 @@ spec:
   source:
     checksum: {}
     type: url
-    url: archive://functions-bluesky-fan-blueskyfan-py-8ofJ
+    url: archive://functions-bluesky-fan-blueskyfan-py-dhRL
 status:
   buildstatus: pending
-  lastUpdateTimestamp: "2025-05-17T06:17:43Z"
+  lastUpdateTimestamp: "2025-05-17T12:14:50Z"
