--- a/backend/fission/specs/route-fanpkg.yaml
+++ b/backend/fission/specs/route-fanpkg.yaml
@@ -2,21 +2,21 @@ apiVersion: fission.io/v1
 kind: HTTPTrigger
 metadata:
   creationTimestamp: null
-  name: blueskyfan-route
+  name: fanpkg
 spec:
-  createingress: true
+  createingress: false
   functionref:
     functionweights: null
-    name: blueskyfan
+    name: fanpkg
     type: name
   host: ""
   ingressconfig:
     annotations: null
     host: '*'
-    path: /blueskyfan
+    path: /fanpkg
     tls: ""
   method: ""
   methods:
-  - POST
+  - GET
   prefix: ""
-  relativeurl: /blueskyfan
+  relativeurl: /fanpkg
