--- a/backend/fission/specs/timetrigger-aharvester-timer.yaml
+++ b/backend/fission/specs/timetrigger-aharvester-timer.yaml
@@ -2,10 +2,10 @@ apiVersion: fission.io/v1
 kind: TimeTrigger
 metadata:
   creationTimestamp: null
-  name: enqueue-timer
+  name: aharvester-timer
 spec:
-  cron: '*/5 * * * *'
+  cron: '*/1 * * * *'
   functionref:
     functionweights: null
-    name: enqueue
+    name: aharvester
     type: name
