edited some bugs and correct check variable

--- a/backend/fission/specs/route-scoreharvester-route.yaml
+++ b/backend/fission/specs/route-scoreharvester-route.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: scoreharvester-route
 spec:
-  createingress: false
+  createingress: true
   functionref:
     functionweights: null
     name: scoreharvester
