--- a/backend/fission/specs/route-enqueue.yaml
+++ b/backend/fission/specs/route-enqueue.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   name: enqueue
 spec:
-  createingress: false
+  createingress: true
   functionref:
     functionweights: null
     name: enqueue
